language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_arguments_with_labels_and_variables_uses_different_names.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let list = [2, 4, 5]\n  let value = 1\n  find(each: value, in: list)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let list = [2, 4, 5]
  let value = 1
  find(each: value, in: list)
  ↑                          
}


----- AFTER ACTION

pub fn main() {
  let list = [2, 4, 5]
  let value = 1
  find(each: value, in: list)
}

fn find(each value: Int, in list: List(Int)) -> a {
  todo
}
