language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_arguments_with_same_name_get_renamed.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wubble(wibble, wibble)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let wibble = 10
  wubble(wibble, wibble)
  ↑                     
}


----- AFTER ACTION

pub fn main() {
  let wibble = 10
  wubble(wibble, wibble)
}

fn wubble(wibble: Int, wibble_2: Int) -> a {
  todo
}
