language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_generates_argument_names_from_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  add(1, addend: 10)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  add(1, addend: 10)
  ↑                 
}


----- AFTER ACTION

pub fn main() {
  add(1, addend: 10)
}

fn add(int: Int, addend addend: Int) -> a {
  todo
}
