language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_generates_argument_names_from_variables.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let wibble = 10\n  let wobble = 20\n\n  wubble(wibble, wobble, 14)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let wibble = 10
  let wobble = 20

  wubble(wibble, wobble, 14)
  ↑                         
}


----- AFTER ACTION

pub fn main() {
  let wibble = 10
  let wobble = 20

  wubble(wibble, wobble, 14)
}

fn wubble(wibble: Int, wobble: Int, int: Int) -> a {
  todo
}
