language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_in_other_module.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.wibble()\n  wibble.wobble()\n}\n"
---
----- BEFORE ACTION

import wibble

pub fn main() {
  wibble.wibble()
  wibble.wobble()
         ↑       
}


----- AFTER ACTION
// --- Edits applied to module 'wibble'
pub fn wibble() {}

pub fn wobble() -> a {
  todo
}
