language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_in_other_module_correctly_appends.snap
---
source: language-server/src/tests/action.rs
expression: "import module_breaker/another\n\npub fn main() -> Nil {\n  another.function()\n}\n"
---
----- BEFORE ACTION
import module_breaker/another

pub fn main() -> Nil {
  another.function()
          ↑         
}


----- AFTER ACTION
// --- Edits applied to module 'module_breaker/another'
pub fn useless() {
  Nil
}


pub fn function() -> Nil {
  todo
}
