language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_labels_and_arguments_can_share_the_same_name.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wubble(wibble, wibble: 14)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let wibble = 10
  wubble(wibble, wibble: 14)
  ↑                         
}


----- AFTER ACTION

pub fn main() {
  let wibble = 10
  wubble(wibble, wibble: 14)
}

fn wubble(wibble: Int, wibble wibble_2: Int) -> a {
  todo
}
