language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_picks_argument_name_based_on_record_access.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type User {\n    User(id: Int, name: String)\n}\n\npub fn go(user: User) {\n  authenticate(user.id, user.name)\n}\n"
---
----- BEFORE ACTION

pub type User {
    User(id: Int, name: String)
}

pub fn go(user: User) {
  authenticate(user.id, user.name)
  ↑                               
}


----- AFTER ACTION

pub type User {
    User(id: Int, name: String)
}

pub fn go(user: User) {
  authenticate(user.id, user.name)
}

fn authenticate(id: Int, name: String) -> a {
  todo
}
