language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_picks_argument_name_based_on_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(\"Hello\", 1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble("Hello", 1)
  ↑                 
}


----- AFTER ACTION

pub fn main() {
  wibble("Hello", 1)
}

fn wibble(string: String, int: Int) -> a {
  todo
}
