language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_takes_labels_into_account.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(2, n: 1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(2, n: 1)
  ↑              
}


----- AFTER ACTION

pub fn main() {
  wibble(2, n: 1)
}

fn wibble(int: Int, n n: Int) -> a {
  todo
}
