language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_function_wont_generate_two_arguments_with_the_same_name_if_they_have_the_same_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(2, 1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(2, 1)
  ↑           
}


----- AFTER ACTION

pub fn main() {
  wibble(2, 1)
}

fn wibble(int: Int, int_2: Int) -> a {
  todo
}
